finished home page

--- a/index.html
+++ b/index.html
@@ -3,20 +3,112 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>ENX2 Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
 </head>
     <body>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About Our Firm</li>
-                <li>Our Practice Areas</li>
-                <li>Recent Victories</li>
-                <li>Testimonials and Reviews</li>
-            </ul>
-        </nav>
+        <div class="bg">
+            <div class="navBg">
+                <nav class="container">
+                    <ul class="nav-links">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About Our Firm</a></li>
+                        <li><a href="">Our Practice Areas</a></li>
+                        <li><a href="">Recent Victories</a></li>
+                        <li><a href="">Testimonials and Reviews</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                    <div class="burger">
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
+                    </div>
+                </nav>
+            </div>
+            <div class="header container" >
+                <img src="images/logo.png" alt="logo image">
+                <h2>1800-123-4567</h2>
+            </div>
+        </div>
+        <div class="container firstHeader">
+            <h1>40 Years of Marketing Experience</h1>
+            <p>We are a friendly firm of Financial Advisors who are happy to meet with you face to face or liaise with you via the phone or email to provide a service that’s right for you.</p>
+        </div>
+        <div class="container practiceArea">
+            <div>
+                <div class="circleImg">
+                    <img src="images/injury.png" alt="injury">
+                </div>
+                <h2>Personal Injury</h2>
+                <p>We are the state’s number one ranked employment law firm. We’ll protect your legal rights and give you the justice you deserve. </p>
+            </div>
+            <div>
+                <div class="circleImg">
+                    <img src="images/criminal.png" alt="injury">
+                </div>
+                <h2>Criminal Law</h2>
+                 <p>We are the state’s number one ranked criminal law firm. We’ll protect your legal rights and give you the justice you deserve. </p>
+            </div>
+            <div>
+                <div class="circleImg">
+                    <img src="images/employment.png" alt="injury">
+                </div>
+                <h2>Employment Law</h2>
+                 <p>We are the state’s number one ranked employment law firm. We’ll protect your legal rights and give you the justice you deserve. </p>
+            </div>
+            <div>
+                <div class="circleImg">
+                    <img src="images/family.png" alt="injury">
+                </div>
+                <h2>Family Law</h2>
+                 <p>We are the state’s number one ranked employment law firm. We’ll protect your legal rights and give you the justice you deserve. </p>
+            </div>
+
+        </div>
+        <div class="container bottomSection">
+            <div >
+                <p>We are a friendly firm of Financial Advisors who are happy to meet with you face to face or liaise with you via the phone or email to provide a service that’s right for you. Our Services included offering advice and solutions on Mortgages, Insurance, Financial Protection, Investments and Pensions. Our aim is to leave you worry free about your finances because you know they are in safe hands.</p>
+                <p>We have specialist advisors in all areas of our business as well as fantastic support staff who will be able to help you if your advisor is unavailable when you make contact. We are authorised and regulated by the Financial Services Authority (FSA).</p>
+                <p>We will have an initial meeting for which there will be no charge. We will then put together a plan including our recommendations. This plan will include our fees so you can see upfront what you will need to pay. If you are happy with the plan and the fees we will then put the plan into action. We will regularly review how things are going in line with the review schedule in the plan.</p>
+            </div>
+            <div>
+                <div class=imageBottom>
+                    <img src="images/gavel.png" alt="gavel">
+                </div>    
+            </div>
+        </div>
+        <footer>
+            <div class="footer1"> 
+                <div class="footerContainer container">
+                    <div class="footerNav">
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">About Our Firm</a></li>
+                            <li><a href="">Our Practice Areas</a></li>
+                            <li><a href="">Recent Victories</a></li>
+                            <li><a href="">Testimonials and Reviews</a></li>
+                            <li><a href="">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="footerSocial">
+                        <ul>    
+                            <li><img src="images/facebook.png" alt=""></li>
+                            <li><img src="images/google.png" alt=""></li>
+                            <li><img src="images/linkedin.png" alt=""></li>
+                            <li><img src="images/twitter.png" alt=""></li>
+                            <li><img src="images/youtube.png" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer2">
+                <div class="container">
+                    <p>Copyright © 2016. All Rights Reserved. Powered by Best Casesite.</p>
+                </div>
+            </div>
+        </footer>
+        <script src="nav.js"></script>
     </body>
 </html>
